--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -18,8 +18,11 @@
     "@mantine/dropzone": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
     "@mantine/notifications": "^6.0.10",
+    "case": "^1.6.3",
     "dayjs": "^1.11.7",
+    "jotai": "^2.1.0",
     "localforage": "^1.10.0",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1"
@@ -38,6 +41,7 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
