--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,15 +2,17 @@
   "name": "@vexilla/types",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vexilla/client": "workspace:^"
+    "@vexilla/client": "workspace:^",
+    "@vexilla/hosts": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.0.4"
