--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -18,6 +18,7 @@
     "@mantine/dropzone": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
     "@mantine/notifications": "^6.0.10",
+    "@vexilla/hosts": "workspace:*",
     "case": "^1.6.3",
     "dayjs": "^1.11.7",
     "jotai": "^2.1.0",
@@ -34,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vexilla/types": "workspace:*",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
