--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,20 +13,27 @@
     "@emotion/react": "^11.11.0",
     "@fontsource/atkinson-hyperlegible": "^4.5.11",
     "@fontsource/racing-sans-one": "^4.5.10",
+    "@iconify/icons-solar": "^1.2.0",
+    "@iconify/react": "^1.1.3",
     "@mantine/core": "^6.0.10",
     "@mantine/dates": "^6.0.10",
     "@mantine/dropzone": "^6.0.10",
+    "@mantine/form": "^6.0.11",
     "@mantine/hooks": "^6.0.10",
     "@mantine/notifications": "^6.0.10",
+    "@tanstack/react-form": "^0.0.10",
     "@vexilla/hosts": "workspace:*",
     "case": "^1.6.3",
     "dayjs": "^1.11.7",
     "jotai": "^2.1.0",
+    "jotai-optics": "^0.3.0",
     "localforage": "^1.10.0",
     "nanoid": "^4.0.2",
+    "optics-ts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.1.3",
@@ -34,8 +41,8 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0",
     "@vexilla/types": "workspace:*",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
