--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vexilla/client": "workspace:^",
     "@vexilla/hosts": "workspace:*"
   },
   "devDependencies": {
