--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.0",
     "@fontsource/atkinson-hyperlegible": "^4.5.11",
     "@fontsource/racing-sans-one": "^4.5.10",
+    "@iconify/icons-game-icons": "^1.2.1",
     "@iconify/icons-solar": "^1.2.0",
     "@iconify/react": "^1.1.3",
     "@mantine/core": "^6.0.10",
@@ -22,20 +23,24 @@
     "@mantine/hooks": "^6.0.10",
     "@mantine/notifications": "^6.0.10",
     "@tanstack/react-form": "^0.0.10",
+    "@vexilla/client": "workspace:^",
     "@vexilla/hosts": "workspace:*",
     "case": "^1.6.3",
     "dayjs": "^1.11.7",
     "jotai": "^2.1.0",
     "jotai-optics": "^0.3.0",
     "localforage": "^1.10.0",
+    "lodash-es": "^4.17.21",
     "nanoid": "^4.0.2",
     "optics-ts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "valtio": "^1.10.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^20.1.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -49,7 +54,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.4",
     "vite": "^4.3.2",
     "vite-tsconfig-paths": "^4.2.0"
   }
