--- a/clients/client-js/package.json
+++ b/clients/client-js/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@vexilla/client",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "A client for the Vexilla feature flag system",
-  "main": "dist/client.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "node dist/test_client.js",
     "compile": "tsc",
@@ -19,9 +20,10 @@
     "axios": "^0.21.0",
     "husky": "^4.3.8",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@vexilla/types": "workspace:*",
     "uuid": "^8.3.2",
     "xxhashjs": "^0.2.2"
   },
