--- a/clients/client-js/packages/client-axios/package.json
+++ b/clients/client-js/packages/client-axios/package.json
@@ -17,11 +17,11 @@
   "devDependencies": {
     "husky": "^4.3.8",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@types/node": "^14.14.13",
-    "@vexilla/client": "^0.0.16",
+    "@vexilla/client": "workspace:*",
     "axios": "^0.21.0",
     "uuid": "^8.3.2",
     "xxhashjs": "^0.2.2"
