--- a/packages/hosts/package.json
+++ b/packages/hosts/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
+    "watch": "nodemon -e *.ts -w src --exec \"pnpm build\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "stream": "^0.0.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   }
 }
