feat: initial work into validation and diff status

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -25,10 +25,12 @@
     "@tanstack/react-form": "^0.0.10",
     "@vexilla/client": "workspace:^",
     "@vexilla/hosts": "workspace:*",
+    "@vexilla/validators": "workspace:*",
     "case": "^1.6.3",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
+    "microdiff": "^1.3.2",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
