--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,6 +14,7 @@
     "@fontsource/atkinson-hyperlegible": "^4.5.11",
     "@fontsource/racing-sans-one": "^4.5.10",
     "@iconify/icons-game-icons": "^1.2.1",
+    "@iconify/icons-octicon": "^1.2.42",
     "@iconify/icons-solar": "^1.2.0",
     "@iconify/react": "^1.1.3",
     "@mantine/core": "^6.0.10",
@@ -25,7 +26,6 @@
     "@tanstack/react-form": "^0.0.10",
     "@vexilla/client": "workspace:^",
     "@vexilla/hosts": "workspace:*",
-    "@vexilla/validators": "workspace:*",
     "case": "^1.6.3",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
