--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -32,6 +32,7 @@
     "lodash-es": "^4.17.21",
     "microdiff": "^1.3.2",
     "nanoid": "^4.0.2",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^20.1.3",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
