--- a/clients/client-dart/README.toml
+++ b/clients/client-dart/README.toml
@@ -16,7 +16,7 @@ dependencies:
 ```
 '''
 CustomInstanceHash = "customInstanceHash"
-FetchFlags = "fetchFlags"
+SyncFlags = "fetchFlags"
 SetupSnippet = '''
 ```dart
 var client = VexillaClient(
