--- a/clients/client-rust/README.toml
+++ b/clients/client-rust/README.toml
@@ -4,18 +4,16 @@ InstallInstructions = '''
 Add the client to your imports.
 
 ```rust
-vexilla_client = "0.0.1"
+vexilla_client = "1.x.x"
 ```
 '''
 CustomInstanceHash = "custom_instance_hash"
-FetchFlags = "fetch_flags_blocking"
+SyncFlags = "sync_flags_blocking"
 SetupSnippet = '''
 ```rust
 let mut client = VexillaClient::new("dev", "https://BUCKET_NAME.s3-website-AWS_REGION.amazonaws.com", user_id);
 
-let mut flags = client.fetch_flags_blocking("features.json");
-
-client.set_flags(flags);
+client.sync_flags_blocking("features.json");
 ```
 '''
 Should = "Should"
