fix: add engines to package.json files

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "name": "vexilla",
   "dependencies": {
     "yargs": "^17.5.1"
+  },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8.5.0"
   }
 }
