--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -58,5 +58,9 @@
     "typescript": "^5.0.4",
     "vite": "^4.3.2",
     "vite-tsconfig-paths": "^4.2.0"
+  },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8.5.0"
   }
 }
