--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -41,5 +41,9 @@
     "@iconify/icons-solar": "^1.2.0",
     "@iconify/react": "^1.1.3",
     "@tailwindcss/typography": "^0.5.9"
+  },
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=8.5.0"
   }
 }
