--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -43,7 +43,6 @@
     "@tailwindcss/typography": "^0.5.9"
   },
   "engines": {
-    "node": ">=18",
-    "pnpm": ">=8.5.0"
+    "node": ">=18"
   }
 }
