fix: separate tsc from build

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "typecheck": "tsc",
+    "build:vite": "vite build",
+    "build": "pnpm tsc && pnpm build:vite",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
