--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,11 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "pnpm astro build && pagefind && mkdir -p ./src/_pagefind && cp -R ./dist/_pagefind/* ./src/_pagefind/",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "pnpm astro dev",
+    "start": "pnpm astro dev",
+    "build": "pnpm astro build && pagefind && mkdir -p ./src/_pagefind && cp -R ./dist/_pagefind/* ./src/_pagefind/"
   },
   "dependencies": {
     "@astrojs/markdoc": "^0.4.4",
