--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2.1
 
 orbs:
-  bun: cmgriffing/bun-orb@0.0.2
+  bun: cmgriffing/bun-orb@0.0.3
+  node: circleci/node@5.1.0
 
 jobs:
   build:
@@ -9,11 +10,12 @@ jobs:
       - image: cimg/base:2023.03
     steps:
       - checkout
+      - node/install
+      - bun/setup
       - run: cd apps/git-auth
       - run: bun bake
 # Orchestrate our job run sequence
 workflows:
   build:
     jobs:
-      - setup
       - build
