--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/base:2023.03
+      - image: cimg/node:18.17
     steps:
       - bun/setup
       - checkout
