feat: get cli tool up and running for current SDKs (js, ts, rust)

--- a/packages/cli/build.tsconfig.json
+++ b/packages/cli/build.tsconfig.json
@@ -11,7 +11,8 @@
     "newLine": "LF",
     "noEmitOnError": true,
     "esModuleInterop": true,
-    "outDir": "./bin"
+    "outDir": "./bin",
+    "types": ["node"]
   },
   "exclude": ["./node_modules/**/*"],
   "include": ["./src/**/*.ts"]
