--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -15,6 +15,7 @@
     "declaration": true,
     "declarationMap": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]
   }
 }
