--- a/apps/docs/.gitignore
+++ b/apps/docs/.gitignore
@@ -1,6 +1,5 @@
 # build output
 dist/
-pagefind
 
 # generated types
 .astro/
@@ -20,3 +19,6 @@ pnpm-debug.log*
 
 # macOS-specific files
 .DS_Store
+
+# icons
+src/icons/phosphor
