--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "dev": "pnpm astro dev",
     "start": "pnpm astro dev",
-    "build": "node ./node_modules/astro/astro.js build && node ./node_modules/pagefind/lib/index.js && mkdir -p ./src/_pagefind && cp -R ./dist/_pagefind/* ./src/_pagefind/"
+    "build": "node ./node_modules/astro/astro.js build && pnpm pagefind && mkdir -p ./src/pagefind && cp -R ./dist/pagefind/* ./src/pagefind/",
+    "postinstall": "mkdir -p src/icons/phosphor && cp -R ./node_modules/@phosphor-icons/core/assets/* src/icons/phosphor/"
   },
   "dependencies": {
     "@astrojs/markdoc": "^0.4.4",
-    "@astrojs/react": "^3.0.0",
+    "@astrojs/react": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "@fontsource/atkinson-hyperlegible": "^4.5.11",
     "@fontsource/fira-code": "^5.0.8",
     "@fontsource/racing-sans-one": "^4.5.10",
+    "@iconify/icons-ph": "^1.2.4",
+    "@iconify/icons-solar": "^1.2.0",
+    "@iconify/react": "^1.1.3",
+    "@phosphor-icons/core": "^2.0.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
@@ -21,13 +26,14 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.3",
-    "astro": "^3.0.3",
+    "astro": "^3.1.0",
+    "astro-icon": "^0.8.1",
     "astro-toml": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "dayjs": "^1.11.7",
-    "pagefind": "^0.12.0",
+    "pagefind": "^1.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "shiki": "^0.14.3",
@@ -36,8 +42,6 @@
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
-    "@iconify/icons-solar": "^1.2.0",
-    "@iconify/react": "^1.1.3",
     "@tailwindcss/typography": "^0.5.9"
   },
   "engines": {
