--- a/clients/client-csharp/Vexilla.Client/Vexilla.Client.csproj
+++ b/clients/client-csharp/Vexilla.Client/Vexilla.Client.csproj
@@ -10,6 +10,6 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
-
 </Project>
