--- a/clients/php/composer.json
+++ b/clients/php/composer.json
@@ -9,10 +9,13 @@
       "email": "cmgriffing@gmail.com"
     }
   ],
-  "require": {},
+  "require": {
+    "ext-mbstring": "*",
+    "nesbot/carbon": "^2.71.0"
+  },
   "require-dev": {
-    "php": ">=7.0",
-    "phpunit/phpunit": "^8.5.5 || ^9.3.5"
+    "php": "^7.4",
+    "phpunit/phpunit": "^9.3.5"
   },
   "autoload": {
     "psr-4": {
@@ -21,7 +24,13 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Vexilla\\": "tests/"
+      "Vexilla\\": "src/",
+      "VexillaTest\\": "tests/"
     }
+  },
+  "scripts": {
+    "test": [
+      "phpunit --verbose --bootstrap vendor/autoload.php tests/*.php"
+    ]
   }
 }
