fix: update some Bazel stuff

--- a/clients/rust/BUILD
+++ b/clients/rust/BUILD
@@ -2,10 +2,12 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 
 rust_library(
     name = "vexilla_client",
-
-    # Specifies the source files for the library.
     srcs = ["src/lib.rs"],
-
-    # Specifies the Rust edition to use for this library.
     edition = "2021",
+)
+
+rust_test(
+    name = "unit_test",
+    crate = ":lib",
+    deps = [],
 )
