--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -22,7 +22,20 @@
 bazel_dep(name = "rules_go", version = "0.39.1")
 bazel_dep(name = "gazelle", version = "0.29.0")
 
-# JS (See WORKSPACE)
+# JS/TS
+
+bazel_dep(name = "aspect_rules_ts", version = "2.0.0")
+
+rules_ts_ext = use_extension(
+    "@aspect_rules_ts//ts:extensions.bzl",
+    "ext",
+    dev_dependency = True,
+)
+
+rules_ts_ext.deps()
+
+use_repo(rules_ts_ext, "npm_typescript")
+
 # Kotlin (See WORKSPACE)
 # Lua (No Bazel support)
 
