fix: undo mod.rs changes and add other source files to build

--- a/clients/rust/BUILD
+++ b/clients/rust/BUILD
@@ -2,7 +2,13 @@ load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 
 rust_library(
     name = "vexilla_client",
-    srcs = ["src/lib.rs"],
+    srcs = [
+        "src/example.rs",
+        "src/hashing.rs",
+        "src/lib.rs",
+        "src/scheduling.rs",
+        "src/types.rs",
+    ],
     edition = "2018",
 )
 
