--- a/clients/csharp/Vexilla.Client/Vexilla.Client.csproj
+++ b/clients/csharp/Vexilla.Client/Vexilla.Client.csproj
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsTestProject>false</IsTestProject>
@@ -7,9 +7,5 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <ReleaseVersion>0.1.0</ReleaseVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="System.Text.Json" Version="7.0.3" />
-  </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
