--- a/clients/csharp/Vexilla.Client.Tests/Vexilla.Client.Tests.csproj
+++ b/clients/csharp/Vexilla.Client.Tests/Vexilla.Client.Tests.csproj
@@ -1,25 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <AssemblyName>Vexilla.Client.Tests</AssemblyName>
     <RootNamespace>Vexilla.Client.Tests</RootNamespace>
-    <IsPackable>false</IsPackable>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <ReleaseVersion>0.1.0</ReleaseVersion>
-  </PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.2.0" />
-  </ItemGroup>
+    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Vexilla.Client\Vexilla.Client.csproj" />
   </ItemGroup>
+
+  <Import Project="..\.paket\Paket.Restore.targets" />
 
 </Project>
