--- a/clients/php/docker-compose.ci.yml
+++ b/clients/php/docker-compose.ci.yml
@@ -9,4 +9,4 @@ services:
     command: composer test
     tty: true
     volumes:
-      - ${{ github.workspace }}/clients/php:/var/www/html
+      - ${{ GITHUB_WORKSPACE }}/clients/php:/var/www/html
