chore: try without images at the metadata step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/vexilla-test-server
+        # with:
+        #   images: ghcr.io/vexilla-test-server
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
