--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,26 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        # with:
-        #   images: ghcr.io/vexilla-test-server
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./packages/test-server
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Run background service
+        run: docker run -p 3000:3000 -d --workdir /home/node/app -v ${{ github.workspace }}:/home/node/app node:20-alpine npm run start
 
       # Bazel-supported languages
       - name: Cache Bazel
