chore: try ls -a inside of actions

--- a/clients/php/docker-compose.ci.yml
+++ b/clients/php/docker-compose.ci.yml
@@ -6,8 +6,8 @@ services:
     build: .
     ports:
       - 3456
-    # command: ls -a
-    command: composer test
+    command: ls -a
+    # command: composer test
     # tty: true
     volumes:
       - ./:/var/www/html
