fix: use proper test command and clean up workflow

--- a/clients/php/docker-compose.ci.yml
+++ b/clients/php/docker-compose.ci.yml
@@ -6,8 +6,7 @@ services:
     build: .
     ports:
       - 3456
-    command: ls -a
-    # command: composer test
+    command: composer test
     # tty: true
     volumes:
       - ./:/var/www/html
