fix: add exit-code-from

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
       - run: bazel build //...
       # - run: bazel test //...
       # PHP
-      - run: docker-compose -f ./clients/php/docker-compose.ci.yml up
+      - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
