fix: uncomment bazel tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-bazel-
       - run: bazel build //...
-      # - run: bazel test //...
+      - run: bazel test //...
       # PHP
       - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
