fix: add prefix to phpunit path

--- a/clients/php/composer.json
+++ b/clients/php/composer.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "test": [
-      "phpunit --verbose --bootstrap vendor/autoload.php tests/*.php"
+      "./vendor/bin/phpunit --verbose --bootstrap vendor/autoload.php tests/*.php"
     ]
   }
 }
