--- a/clients/php/docker-compose.ci.yml
+++ b/clients/php/docker-compose.ci.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - 3456
     command: composer test
+    network_mode: host
     tty: true
     volumes:
       - ./:/var/www/html
