--- a/clients/php/composer.json
+++ b/clients/php/composer.json
@@ -30,6 +30,7 @@
   },
   "scripts": {
     "test": [
+      "composer install",
       "ls -a",
       "./vendor/bin/phpunit --verbose --bootstrap vendor/autoload.php tests/*.php"
     ]
