--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run background service
-        run: docker run -p 3000:3000 -d --workdir /home/node/app -v ${{ github.workspace }}:/home/node/app node:20-alpine npm run start
+        run: docker run --network host -d --workdir /home/node/app -v ${{ github.workspace }}:/home/node/app node:20-alpine npm run start
 
       # Bazel-supported languages
       - name: Cache Bazel
