--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,13 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{github.actor}}
+          username: Vexilla
           password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build Test Server Image
         run: |
-          docker build . --tag ghcr.io/${{ github.actor }}/test-server:latest
-          docker push ghcr.io/${{ github.actor }}/test-server:latest
+          docker build . --tag ghcr.io/Vexilla/test-server:latest
+          docker push ghcr.io/Vexilla/test-server:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
 
     services:
       test-server:
-        image: ${{ github.actor }}/test-server:latest
+        image: Vexilla/test-server:latest
         ports:
           - 3000:3000
 
