--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,16 +24,17 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: Vexilla
+          username: vexilla
           password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build Test Server Image
         run: |
-          docker build . --tag ghcr.io/Vexilla/test-server:latest
-          docker push ghcr.io/Vexilla/test-server:latest
+          docker build . --tag ghcr.io/vexilla/test-server:latest
+          docker push ghcr.io/vexilla/test-server:latest
 
   deploy:
     runs-on: ubuntu-latest
+    needs: publish-test-server
 
     permissions:
       contents: read
@@ -41,7 +42,7 @@ jobs:
 
     services:
       test-server:
-        image: Vexilla/test-server:latest
+        image: vexilla/test-server:latest
         ports:
           - 3000:3000
 
