--- a/clients/php/docker-compose.ci.yml
+++ b/clients/php/docker-compose.ci.yml
@@ -6,6 +6,8 @@ services:
     environment:
       - TEST_SERVER_HOST
     build: .
+    extra_hosts:
+      - test-server:test-server
     command: composer test
     network_mode: host
     tty: true
