--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
         ports:
           - 3000:3000
         options: |
-          --health-cmd "curl -v http://localhost:3000/manifest.json"
+          --health-cmd "curl -v http://127.0.0.1:3000/manifest.json"
 
     steps:
       - uses: actions/checkout@v3
