--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           docker build . --tag ghcr.io/vexilla/test-server:latest
           docker push ghcr.io/vexilla/test-server:latest
 
-  deploy:
+  test:
     runs-on: ubuntu-latest
     container: ubuntu
     needs: publish-test-server
@@ -71,7 +71,7 @@ jobs:
       #   env:
       #     TEST_SERVER_HOST: test-server
 
-      - run: curl -v http://test-server:3000/manifest.json
+      - run: apt-get -y install curl && curl -v http://test-server:3000/manifest.json
 
       # PHP
       - run: docker-compose -f ./clients/php/docker-compose.ci.yml up  --exit-code-from php-custom
